--- a/Map_Downloader/Base.lproj/Main.storyboard
+++ b/Map_Downloader/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DcW-Zu-ILF">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DcW-Zu-ILF">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-x0-sKd">
-                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device memory" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="cCi-jY-gka">
                                         <rect key="frame" x="5" y="5" width="100" height="20"/>
@@ -61,34 +59,34 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DzC-s6-MD3">
-                                <rect key="frame" x="0.0" y="114" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="94" width="375" height="573"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryCell" id="bBn-kx-6LM" customClass="CountryTableViewCell" customModule="Map_Downloader" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryCell" rowHeight="50" id="bBn-kx-6LM" customClass="CountryTableViewCell" customModule="Map_Downloader" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bBn-kx-6LM" id="0av-B2-jQ1">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fd5-C4-rYj">
-                                                    <rect key="frame" x="5" y="9" width="25" height="25"/>
+                                                    <rect key="frame" x="5" y="12.5" width="25" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="25" id="1Nx-lv-e4A"/>
                                                         <constraint firstAttribute="height" constant="25" id="4I5-YU-d4N"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K19-qg-P5p">
-                                                    <rect key="frame" x="35" y="10" width="275" height="25"/>
+                                                    <rect key="frame" x="35" y="5" width="275" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="25" id="fAj-7f-fGJ"/>
+                                                        <constraint firstAttribute="height" constant="20" id="fAj-7f-fGJ"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRs-3A-L2O">
-                                                    <rect key="frame" x="315" y="8.5" width="25" height="25"/>
+                                                    <rect key="frame" x="315" y="12.5" width="25" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="25" id="hmP-du-lTC"/>
                                                         <constraint firstAttribute="height" constant="25" id="tNC-Kr-Qwz"/>
@@ -96,7 +94,7 @@
                                                     <state key="normal" title="Button"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcD-Vd-AId">
-                                                    <rect key="frame" x="345" y="8.5" width="25" height="25"/>
+                                                    <rect key="frame" x="345" y="12.5" width="25" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="5eL-kR-DFH"/>
                                                         <constraint firstAttribute="width" constant="25" id="ghe-uh-oIA"/>
@@ -106,23 +104,33 @@
                                                         <action selector="toRegions:" destination="bBn-kx-6LM" eventType="touchUpInside" id="4Id-2i-tG7"/>
                                                     </connections>
                                                 </button>
+                                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1Jd-44-7t6">
+                                                    <rect key="frame" x="35" y="40" width="290" height="5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="5" id="3yZ-5n-Pg3"/>
+                                                    </constraints>
+                                                </progressView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="pcD-Vd-AId" secondAttribute="trailing" constant="5" id="4a9-Id-MHM"/>
                                                 <constraint firstItem="pRs-3A-L2O" firstAttribute="leading" secondItem="K19-qg-P5p" secondAttribute="trailing" constant="5" id="9KO-Im-OZu"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="1Jd-44-7t6" secondAttribute="trailing" constant="35" id="GQg-i6-GcS"/>
                                                 <constraint firstItem="Fd5-C4-rYj" firstAttribute="centerY" secondItem="0av-B2-jQ1" secondAttribute="centerY" id="N49-ld-YlE"/>
                                                 <constraint firstItem="K19-qg-P5p" firstAttribute="leading" secondItem="Fd5-C4-rYj" secondAttribute="trailing" constant="5" id="OTx-Jt-dbw"/>
                                                 <constraint firstItem="pcD-Vd-AId" firstAttribute="leading" secondItem="pRs-3A-L2O" secondAttribute="trailing" constant="5" id="Ps6-b2-WjB"/>
                                                 <constraint firstItem="pcD-Vd-AId" firstAttribute="centerY" secondItem="0av-B2-jQ1" secondAttribute="centerY" id="dcD-SN-b4u"/>
+                                                <constraint firstItem="K19-qg-P5p" firstAttribute="top" secondItem="0av-B2-jQ1" secondAttribute="top" constant="5" id="iUE-tG-Pcp"/>
+                                                <constraint firstAttribute="bottom" secondItem="1Jd-44-7t6" secondAttribute="bottom" constant="5" id="j4q-fa-cFB"/>
+                                                <constraint firstItem="1Jd-44-7t6" firstAttribute="leading" secondItem="0av-B2-jQ1" secondAttribute="leading" constant="35" id="jSx-wU-NHL"/>
                                                 <constraint firstItem="Fd5-C4-rYj" firstAttribute="leading" secondItem="0av-B2-jQ1" secondAttribute="leading" constant="5" id="mKL-Sh-BnR"/>
                                                 <constraint firstItem="pRs-3A-L2O" firstAttribute="centerY" secondItem="0av-B2-jQ1" secondAttribute="centerY" id="vuo-SF-moW"/>
-                                                <constraint firstItem="K19-qg-P5p" firstAttribute="centerY" secondItem="0av-B2-jQ1" secondAttribute="centerY" id="zG4-9u-Ape"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="countryName" destination="K19-qg-P5p" id="U5B-gJ-arr"/>
                                             <outlet property="downloadButton" destination="pRs-3A-L2O" id="UmC-60-Hpu"/>
                                             <outlet property="mapImage" destination="Fd5-C4-rYj" id="9SE-JA-qtu"/>
+                                            <outlet property="progress" destination="1Jd-44-7t6" id="3XD-EL-kvQ"/>
                                             <outlet property="toRegionsButton" destination="pcD-Vd-AId" id="fne-3l-Ks1"/>
                                         </connections>
                                     </tableViewCell>
@@ -154,7 +162,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="478" y="116"/>
+            <point key="canvasLocation" x="477.60000000000002" y="115.59220389805098"/>
         </scene>
         <!--Regions View Controller-->
         <scene sceneID="53q-tb-jRP">
@@ -169,14 +177,14 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RegionCell" id="krY-ZS-6mu" customClass="RegionTableViewCell" customModule="Map_Downloader" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="krY-ZS-6mu" id="Ss0-lR-PcS">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-Ac-d5i">
-                                                    <rect key="frame" x="30" y="9" width="315" height="25"/>
+                                                    <rect key="frame" x="30" y="9.5" width="315" height="25"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="KEY-s2-F6J"/>
                                                     </constraints>
@@ -249,7 +257,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DcW-Zu-ILF" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wLv-dm-UiR">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
