--- a/Map_Downloader/Base.lproj/Main.storyboard
+++ b/Map_Downloader/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DcW-Zu-ILF">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DcW-Zu-ILF">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3sh-x0-sKd">
-                                <rect key="frame" x="0.0" y="44" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Device memory" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="cCi-jY-gka">
                                         <rect key="frame" x="5" y="5" width="100" height="20"/>
@@ -59,14 +62,14 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DzC-s6-MD3">
-                                <rect key="frame" x="0.0" y="94" width="375" height="573"/>
+                                <rect key="frame" x="0.0" y="114" width="375" height="553"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CountryCell" rowHeight="50" id="bBn-kx-6LM" customClass="CountryTableViewCell" customModule="Map_Downloader" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bBn-kx-6LM" id="0av-B2-jQ1">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fd5-C4-rYj">
@@ -105,7 +108,7 @@
                                                     </connections>
                                                 </button>
                                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="1Jd-44-7t6">
-                                                    <rect key="frame" x="35" y="40" width="290" height="5"/>
+                                                    <rect key="frame" x="35" y="39.5" width="290" height="5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="5" id="3yZ-5n-Pg3"/>
                                                     </constraints>
@@ -177,21 +180,12 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RegionCell" id="krY-ZS-6mu" customClass="RegionTableViewCell" customModule="Map_Downloader" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="krY-ZS-6mu" id="Ss0-lR-PcS">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-Ac-d5i">
-                                                    <rect key="frame" x="30" y="9.5" width="315" height="25"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="25" id="KEY-s2-F6J"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ydA-2o-jha">
                                                     <rect key="frame" x="0.0" y="9.5" width="25" height="25"/>
                                                     <constraints>
@@ -207,23 +201,42 @@
                                                     </constraints>
                                                     <state key="normal" title="Button"/>
                                                     <connections>
-                                                        <action selector="toDownload:" destination="krY-ZS-6mu" eventType="touchUpInside" id="Luv-AI-eia"/>
+                                                        <action selector="toDownload:" destination="krY-ZS-6mu" eventType="touchUpInside" id="5Qk-iN-HU5"/>
                                                     </connections>
                                                 </button>
+                                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TvX-8k-ObR">
+                                                    <rect key="frame" x="30" y="33.5" width="315" height="5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="5" id="5We-mO-YuF"/>
+                                                    </constraints>
+                                                </progressView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QiA-Ac-d5i">
+                                                    <rect key="frame" x="30" y="0.0" width="315" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="KEY-s2-F6J"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="mSG-Cn-GKg" firstAttribute="leading" secondItem="QiA-Ac-d5i" secondAttribute="trailing" constant="5" id="4Hb-HU-htP"/>
                                                 <constraint firstAttribute="trailing" secondItem="mSG-Cn-GKg" secondAttribute="trailing" id="5QH-vq-TZE"/>
                                                 <constraint firstItem="ydA-2o-jha" firstAttribute="leading" secondItem="Ss0-lR-PcS" secondAttribute="leading" id="C9U-k2-k9I"/>
+                                                <constraint firstItem="mSG-Cn-GKg" firstAttribute="leading" secondItem="TvX-8k-ObR" secondAttribute="trailing" constant="5" id="DsZ-Ue-vz9"/>
                                                 <constraint firstItem="mSG-Cn-GKg" firstAttribute="centerY" secondItem="Ss0-lR-PcS" secondAttribute="centerY" id="M39-qL-7is"/>
-                                                <constraint firstItem="QiA-Ac-d5i" firstAttribute="centerY" secondItem="Ss0-lR-PcS" secondAttribute="centerY" id="aZd-Fs-CHw"/>
+                                                <constraint firstItem="QiA-Ac-d5i" firstAttribute="top" secondItem="Ss0-lR-PcS" secondAttribute="top" id="Z85-nU-gO8"/>
+                                                <constraint firstAttribute="bottom" secondItem="TvX-8k-ObR" secondAttribute="bottom" constant="5" id="n8r-FE-ZJg"/>
                                                 <constraint firstItem="ydA-2o-jha" firstAttribute="centerY" secondItem="Ss0-lR-PcS" secondAttribute="centerY" id="rbi-AY-Zl0"/>
                                                 <constraint firstItem="QiA-Ac-d5i" firstAttribute="leading" secondItem="ydA-2o-jha" secondAttribute="trailing" constant="5" id="zVl-fg-T96"/>
+                                                <constraint firstItem="TvX-8k-ObR" firstAttribute="leading" secondItem="ydA-2o-jha" secondAttribute="trailing" constant="5" id="zk7-xI-UFs"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="downloadButton" destination="mSG-Cn-GKg" id="EyO-Lp-mCp"/>
                                             <outlet property="mapIcon" destination="ydA-2o-jha" id="SFf-0e-Mlq"/>
+                                            <outlet property="progress" destination="TvX-8k-ObR" id="qcI-s4-XK1"/>
                                             <outlet property="regionName" destination="QiA-Ac-d5i" id="pHA-Z0-apE"/>
                                         </connections>
                                     </tableViewCell>
@@ -257,7 +270,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DcW-Zu-ILF" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="wLv-dm-UiR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
